--- a/NewStart/style.css
+++ b/NewStart/style.css
@@ -14,53 +14,52 @@ section {
   padding: 50px 0;
 }
 
-header {
-  position: fixed;
-  left: 0;
-  right: 0;
-  z-index: 1;
+header .menu {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #212529;
   padding: 10px 0;
   height: 70px;
   background-color: #212529;
+  position: fixed;
+  right: 0;
+  left: 0;
+  z-index: 1;
 }
-header .imgbox {
+header .menu .imgbox {
   width: 140px;
   margin-left: 120px;
 }
-header nav {
-  margin-right: 120px;
-}
-header nav a {
-  font-size: 19px;
-  margin: 0 20px;
-  cursor: pointer;
-}
-header nav a:hover {
-  color: #dede30;
-}
-header .btn {
+header .menu .btn {
+  color: white;
   display: flex;
   align-items: center;
   display: none;
-  color: white;
   border: 1px solid white;
   padding: 2px;
   opacity: 0.6;
 }
-header .btn h1 {
+header .menu .btn h5 {
   cursor: pointer;
-  font-size: 17px;
   font-weight: 700;
+  font-size: 17px;
 }
-header .btn .icon {
+header .menu .btn .icon {
   margin-left: 7px;
   cursor: pointer;
 }
-@media screen and (min-width: 576px) {
+header .menu nav {
+  margin-right: 120px;
+}
+header .menu nav a {
+  font-size: 19px;
+  margin: 0 20px;
+  cursor: pointer;
+}
+header .menu nav a:hover {
+  color: #ffcb11;
+}
+@media screen and (max-width: 576px) {
   header .menu {
     height: 70px;
   }
@@ -72,7 +71,7 @@ header .btn .icon {
     margin-left: 20px;
   }
 }
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 768px) {
   header .menu nav {
     display: none;
   }
@@ -84,7 +83,7 @@ header .btn .icon {
     margin-left: 20px;
   }
 }
-@media screen and (min-width: 992px) {
+@media screen and (max-width: 992px) {
   header .menu nav {
     margin-right: 55px;
   }
