--- a/NewStart/_header.sass
+++ b/NewStart/_header.sass
@@ -1,43 +1,42 @@
 header
-    position: fixed
-    left: 0
-    right: 0
-    z-index: 1
-    display: flex
-    justify-content: space-between
-    align-items: center
-    background-color: #212529
-    padding: 10px 0
-    height: 70px
-    background-color: #212529
-    .imgbox
-        width: 140px
-        margin-left: 120px
-    nav
-        margin-right: 120px
-        a
-            font-size: 19px
-            margin: 0 20px
-            cursor: pointer
-            &:hover
-                color: #dede30
-    .btn
+    .menu
         display: flex
+        justify-content: space-between
         align-items: center
-        display: none
-        color: #ffff
-        border: 1px solid #ffff
-        padding: 2px
-        opacity: 0.6
-        h1
-            cursor: pointer
-            font-size: 17px
-            font-weight: 700
-        .icon
-            margin-left: 7px
-            cursor: pointer
-
-    @media screen and ( min-width: 576px )
+        padding: 10px 0
+        height: 70px
+        background-color: #212529
+        position: fixed
+        right: 0
+        left: 0
+        z-index: 1
+        .imgbox
+            width: 140px
+            margin-left: 120px
+        .btn
+            color: #ffff
+            display: flex
+            align-items: center
+            display: none
+            border: 1px solid #ffff
+            padding: 2px
+            opacity: 0.6
+            h5
+                cursor: pointer
+                font-weight: 700
+                font-size: 17px
+            .icon
+                margin-left: 7px
+                cursor: pointer
+        nav
+            margin-right: 120px
+            a
+                font-size: 19px
+                margin: 0 20px
+                cursor: pointer
+                &:hover
+                    color: #ffcb11
+    @media screen and ( max-width: 576px )
         .menu
             height: 70px
             .btn
@@ -45,7 +44,7 @@ header
                 padding: 6px 10px
             .imgbox
                 margin-left: 20px
-    @media screen and ( min-width: 768px )
+    @media screen and ( max-width: 768px )
         .menu
             nav
                 display: none
@@ -54,7 +53,7 @@ header
                 margin-right: 30px
             .imgbox
                 margin-left: 20px
-    @media screen and ( min-width: 992px )
+    @media screen and ( max-width: 992px )
         .menu
             nav
                 margin-right: 55px
