--- a/NewStart/_portfolio.sass
+++ b/NewStart/_portfolio.sass
@@ -1,28 +1,27 @@
 #portfolio
+    background-color: #acadaf16
     .textbox
-        padding-top: 20px
+        padding-top: 40px
         text-align: center
         h1
+            margin: 20px
             font-size: 55px
             font-weight: 700
-            font-size: bold
-            color: #110909
         h3
-            margin: 20px
-            font-size: 20px
-            color: #110909
-        h4
-            font-size: 30px
-            font-weight: 700
-            font-size: bold
-        h5
-            margin: 5px
             font-size: 18px
-            color: #6a6969b5
+            margin-bottom: 60px
+        h2
+            font-size: 29px
+            font-weight: 700
+            line-height: 1.2
+            margin-top: 13px
+        h4
+            font-size: 20px
+            color: #838489
     .box
+        margin-bottom: 30px
         background-color: #ffff
         padding-bottom: 20px
-        text-align: center
         .imgbox
             position: relative
             .icon
@@ -30,8 +29,8 @@
                 display: flex
                 justify-content: center
                 align-items: center
-                color: #ffff
                 font-size: 60px
+                color: #ffff
                 position: absolute
                 top: 0
                 bottom: 0
