--- a/NewStart/_contact.sass
+++ b/NewStart/_contact.sass
@@ -1,7 +1,7 @@
 #contact
-    background-image: url("https://startbootstrap.github.io/startbootstrap-agency/assets/img/map-image.png")
+    background-image: url(https://startbootstrap.github.io/startbootstrap-agency/assets/img/map-image.png)
+    background-color: #212529
     background-position: center center
-    background-size: cover
     height: 100%
     .box
         color: #ffff
