--- a/NewStart/_header.sass
+++ b/NewStart/_header.sass
@@ -19,7 +19,8 @@ header
             align-items: center
             display: none
             border: 1px solid #ffff
-            padding: 2px
+            margin-right: 10px
+            padding: 6px 10px
             opacity: 0.6
             h5
                 cursor: pointer
