--- a/NewStart/style.css
+++ b/NewStart/style.css
@@ -36,7 +36,8 @@ header .menu .btn {
   align-items: center;
   display: none;
   border: 1px solid white;
-  padding: 2px;
+  margin-right: 10px;
+  padding: 6px 10px;
   opacity: 0.6;
 }
 header .menu .btn h5 {
