--- a/NewStart/_our.sass
+++ b/NewStart/_our.sass
@@ -12,8 +12,8 @@
             font-size: 20px
             color: #110909
     .box
+        text-align: center
         .textbox
-            text-align: center
             margin: 5px 0
         h2
             font-weight: 300
@@ -40,6 +40,7 @@
         .imgbox
             display: flex
             justify-content: center
+            align-items: center
             overflow: hidden
             border-radius: 50%
             border: 8px solid #87818131
