--- a/NewStart/_about.sass
+++ b/NewStart/_about.sass
@@ -18,6 +18,7 @@
             margin: 0 20px
             text-align: end
             h2,h4
+                margin: 10px
                 font-size: 30px
                 font-weight: 700
                 line-height: 1.3
@@ -47,10 +48,12 @@
             text-align: center
             padding: 0 40px
             h2
+                display: flex
+                flex-flow: wrap
                 color: #ffff
                 font-size: 35px
-                font-weight: 700
-                line-height: 1.2
+                font-weight: 200
+                margin: 8px
     @media screen and ( max-width: 992px )
         .box
             margin: 0 0 100px 0
