--- a/NewStart/_contact.sass
+++ b/NewStart/_contact.sass
@@ -32,6 +32,7 @@
             font-weight: 700
             padding: 18px
     .btn
+        margin: 40px
         font-weight: 700
         padding: 18px 40px
         background-color: #ffc021
