--- a/NewStart/style.css
+++ b/NewStart/style.css
@@ -285,6 +285,7 @@ header .menu nav a:hover {
   text-align: end;
 }
 #about .box .textbox h2, #about .box .textbox h4 {
+  margin: 10px;
   font-size: 30px;
   font-weight: 700;
   line-height: 1.3;
@@ -322,10 +323,12 @@ header .menu nav a:hover {
   padding: 0 40px;
 }
 #about .story .minibox h2 {
+  display: flex;
+  flex-flow: wrap;
   color: white;
   font-size: 35px;
-  font-weight: 700;
-  line-height: 1.2;
+  font-weight: 200;
+  margin: 8px;
 }
 @media screen and (max-width: 992px) {
   #about .box {
@@ -424,8 +427,10 @@ header .menu nav a:hover {
   font-size: 20px;
   color: #110909;
 }
-#our .box .textbox {
+#our .box {
   text-align: center;
+}
+#our .box .textbox {
   margin: 5px 0;
 }
 #our .box h2 {
@@ -458,6 +463,7 @@ header .menu nav a:hover {
 #our .box .imgbox {
   display: flex;
   justify-content: center;
+  align-items: center;
   overflow: hidden;
   border-radius: 50%;
   border: 8px solid rgba(135, 129, 129, 0.1921568627);
@@ -533,6 +539,7 @@ header .menu nav a:hover {
   padding: 18px;
 }
 #contact .btn {
+  margin: 40px;
   font-weight: 700;
   padding: 18px 40px;
   background-color: #ffc021;
