--- a/NewStart/_about.sass
+++ b/NewStart/_about.sass
@@ -1,5 +1,5 @@
 #about
-
+    padding: 100px 0
     .text-center
         margin-bottom: 55px
         h1
@@ -18,7 +18,6 @@
             margin: 0 20px
             text-align: end
             h2,h4
-                margin: 10px
                 font-size: 30px
                 font-weight: 700
                 line-height: 1.3
@@ -39,21 +38,21 @@
         display: flex
         justify-content: center
     .story
-        width: 200px
-        height: 200px
+        width: 210px
+        height: 210px
+        border: 8px solid #e9ecef
         background-color: #ffc800
         border-radius: 180px
-        border: 8px solid #e9ecef
+        display: flex
+        justify-content: center
         .minibox
+            width: 70px
             text-align: center
-            padding: 0 40px
             h2
-                display: flex
-                flex-flow: wrap
                 color: #ffff
-                font-size: 35px
-                font-weight: 200
-                margin: 8px
+                font-size: 20px
+                font-weight: 600
+                line-height: 1.4
     @media screen and ( max-width: 992px )
         .box
             margin: 0 0 100px 0
@@ -88,11 +87,13 @@
             .story
                 width: 140px
                 height: 140px
+                display: flex
+                justify-content: center
                 .minibox
-                    padding: 0 30px
+                    text-align: center
                     h2
-                        font-size: 30px
-
+                        font-size: 14px
+                        line-height: 1.2
     @media screen and ( max-width: 576px )
         .text-center
             h1
@@ -104,8 +105,8 @@
                 width: 140px
                 height: auto
             .textbox
-                h2,h4
-                    font-size: 25px
+                h4
+                    font-size: 12px
                 p
                     font-size: 18px
         .yellow
@@ -115,4 +116,4 @@
                 .minibox
                     padding: 0 15px
                     h2
-                        font-size: 18px
+                        font-size: 10px
