--- a/NewStart/style.css
+++ b/NewStart/style.css
@@ -262,6 +262,9 @@ header .menu nav a:hover {
   }
 }
 
+#about {
+  padding: 100px 0;
+}
 #about .text-center {
   margin-bottom: 55px;
 }
@@ -285,7 +288,6 @@ header .menu nav a:hover {
   text-align: end;
 }
 #about .box .textbox h2, #about .box .textbox h4 {
-  margin: 10px;
   font-size: 30px;
   font-weight: 700;
   line-height: 1.3;
@@ -312,23 +314,23 @@ header .menu nav a:hover {
   justify-content: center;
 }
 #about .story {
-  width: 200px;
-  height: 200px;
+  width: 210px;
+  height: 210px;
+  border: 8px solid #e9ecef;
   background-color: #ffc800;
   border-radius: 180px;
-  border: 8px solid #e9ecef;
+  display: flex;
+  justify-content: center;
 }
 #about .story .minibox {
+  width: 70px;
   text-align: center;
-  padding: 0 40px;
 }
 #about .story .minibox h2 {
-  display: flex;
-  flex-flow: wrap;
   color: white;
-  font-size: 35px;
-  font-weight: 200;
-  margin: 8px;
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 1.4;
 }
 @media screen and (max-width: 992px) {
   #about .box {
@@ -373,12 +375,15 @@ header .menu nav a:hover {
   #about .yellow .story {
     width: 140px;
     height: 140px;
+    display: flex;
+    justify-content: center;
   }
   #about .yellow .story .minibox {
-    padding: 0 30px;
+    text-align: center;
   }
   #about .yellow .story .minibox h2 {
-    font-size: 30px;
+    font-size: 14px;
+    line-height: 1.2;
   }
 }
 @media screen and (max-width: 576px) {
@@ -392,8 +397,8 @@ header .menu nav a:hover {
     width: 140px;
     height: auto;
   }
-  #about .box .textbox h2, #about .box .textbox h4 {
-    font-size: 25px;
+  #about .box .textbox h4 {
+    font-size: 12px;
   }
   #about .box .textbox p {
     font-size: 18px;
@@ -406,7 +411,7 @@ header .menu nav a:hover {
     padding: 0 15px;
   }
   #about .yellow .story .minibox h2 {
-    font-size: 18px;
+    font-size: 10px;
   }
 }
 
@@ -427,19 +432,25 @@ header .menu nav a:hover {
   font-size: 20px;
   color: #110909;
 }
-#our .box {
-  text-align: center;
-}
-#our .box .textbox {
-  margin: 5px 0;
-}
-#our .box h2 {
+#our .textbox h2 {
   font-weight: 300;
   font-size: 38px;
 }
-#our .box h4 {
+#our .textbox h4 {
   font-size: 18px;
   padding: 5px;
+}
+#our .box {
+  text-align: center;
+}
+#our .box .imgbox {
+  width: 220px;
+  border-radius: 50%;
+  border: 8px solid rgba(135, 129, 129, 0.1921568627);
+}
+#our .box .textbox {
+  text-align: center;
+  margin: 15px 0;
 }
 #our .box ul {
   display: flex;
@@ -449,31 +460,57 @@ header .menu nav a:hover {
   margin: 10px;
 }
 #our .box ul li .icon {
-  color: white;
   display: flex;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
   background-color: #141313;
+  color: white;
   border-radius: 50%;
   padding: 20px;
   width: 10px;
   height: 10px;
   cursor: pointer;
 }
-#our .box .imgbox {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  overflow: hidden;
-  border-radius: 50%;
-  border: 8px solid rgba(135, 129, 129, 0.1921568627);
-  width: 220px;
-}
 #our .textbox p {
-  padding: 40px;
-  margin: 30px;
   text-align: center;
-  font-size: 25px;
+  font-size: 18px;
+  color: #6f7783;
+  line-height: 1.5;
+  margin: 40px 0 50px;
+}
+@media screen and (max-width: 576px) {
+  #our .textbox p {
+    font-size: 18px;
+  }
+  #our .box ul li .icon {
+    font-size: 17px;
+    width: 35px;
+    height: 35px;
+    border-radius: 32px;
+  }
+}
+@media screen and (max-width: 768px) {
+  #our .textbox h3 {
+    margin-bottom: 90px;
+  }
+  #our .textbox p {
+    padding: 0;
+  }
+  #our .box ul {
+    margin-bottom: 50px;
+  }
+  #our .box ul li .icon {
+    font-size: 17px;
+    width: 35px;
+    height: 35px;
+    border-radius: 32px;
+  }
+}
+@media screen and (max-width: 992px) {
+  #our .textbox p {
+    font-size: 20px;
+  }
 }
 
 #companies {
