--- a/NewStart/_our.sass
+++ b/NewStart/_our.sass
@@ -19,13 +19,13 @@
             padding: 5px
     .box
         text-align: center
+        margin: 50px
         .imgbox
             width: 220px
             border-radius: 50%
             border: 8px solid #87818131
         .textbox
             text-align: center
-            margin: 15px 0
         ul
             display: flex
             justify-content: center
@@ -49,37 +49,24 @@
             font-size: 18px
             color: #6f7783
             line-height: 1.5
-            margin:  40px 0 50px
-    @media screen and ( max-width: 576px )
+            margin: 40px 0 50px
+
+    @media screen and ( max-width: 576px)
         .textbox
             p
-                font-size: 18px
-        .box
-            ul
-                li
-                    .icon
-                        font-size: 17px
-                        width: 35px
-                        height: 35px
-                        border-radius: 32px
+                font-size: 16px   
 
-    @media screen and ( max-width: 768px )
+    @media screen and ( max-width: 768px  )
         .textbox
             h3
-                margin-bottom: 90px
+                font-size: 16px
             p
                 padding: 0
         .box
             ul
-                margin-bottom: 50px
-                li
-                    .icon
-                        font-size: 17px
-                        width: 35px
-                        height: 35px
-                        border-radius: 32px
+                margin-bottom: 40px
 
     @media screen and ( max-width: 992px )
         .textbox
             p
-                font-size: 20px
+                font-size: 18px
