--- a/NewStart/style.css
+++ b/NewStart/style.css
@@ -442,6 +442,7 @@ header .menu nav a:hover {
 }
 #our .box {
   text-align: center;
+  margin: 50px;
 }
 #our .box .imgbox {
   width: 220px;
@@ -450,7 +451,6 @@ header .menu nav a:hover {
 }
 #our .box .textbox {
   text-align: center;
-  margin: 15px 0;
 }
 #our .box ul {
   display: flex;
@@ -481,35 +481,23 @@ header .menu nav a:hover {
 }
 @media screen and (max-width: 576px) {
   #our .textbox p {
-    font-size: 18px;
-  }
-  #our .box ul li .icon {
-    font-size: 17px;
-    width: 35px;
-    height: 35px;
-    border-radius: 32px;
+    font-size: 16px;
   }
 }
 @media screen and (max-width: 768px) {
   #our .textbox h3 {
-    margin-bottom: 90px;
+    font-size: 16px;
   }
   #our .textbox p {
     padding: 0;
   }
   #our .box ul {
-    margin-bottom: 50px;
-  }
-  #our .box ul li .icon {
-    font-size: 17px;
-    width: 35px;
-    height: 35px;
-    border-radius: 32px;
+    margin-bottom: 40px;
   }
 }
 @media screen and (max-width: 992px) {
   #our .textbox p {
-    font-size: 20px;
+    font-size: 18px;
   }
 }
 
