--- a/NewStart/_services.sass
+++ b/NewStart/_services.sass
@@ -1,39 +1,40 @@
 #services
+    padding: 90px 0
     .textcenter
-        padding: 30px
+        text-align: center
         h1
-            font-size: 50px
+            font-size: 45px
             font-weight: 700
-            font-size: bold
-            color: #110909
+            padding-bottom: 15px
         h3
-            margin: 20px
+            color: #6a6a6a
+            padding-bottom: 55px
             font-size: 20px
-            color: #6a6969b5
+            line-height: 1.3
     .box
-        display: flex
-        justify-content: space-around
-        margin: 10px
-        .minibox
-            height: 150px
-            width: 150px
-            border-radius: 180px
+        .icon
+            display: flex
+            justify-content: center
+            border-radius: 50%
             background-color: #ffc800
-            li
-                .icon
-                    color: #ffff
-                    font-size: 60px
+            padding: 28px 25px
+            cursor: pointer
+            width: 120px
+            height: 120px
+            font-size: 55px
+            color: #ffff
+
     .textbox
-        padding: 10px
         h2
-            font-size: 29px
+            padding: 10px
+            font-size: 30px
             font-weight: 700
-            font-size: bold
         h4
-            padding: 16px
             font-size: 20px
-            color: #6a6969b5
-    @media screen and ( max-width: 768px  )
-        .textbox
-            padding: 0 0 50px
-        
+            color: #6a6a6a
+            line-height: 1.4
+            padding: 15px 0
+
+@media ( max-width: 999px )
+    h4
+        margin-bottom: 25px
