--- a/NewStart/_services.sass
+++ b/NewStart/_services.sass
@@ -35,6 +35,6 @@
             line-height: 1.4
             padding: 15px 0
 
-@media ( max-width: 999px )
+@media screen and ( max-width: 992px )
     h4
         margin-bottom: 25px
