--- a/NewStart/_our.sass
+++ b/NewStart/_our.sass
@@ -53,6 +53,8 @@
 
     @media screen and ( max-width: 576px)
         .textbox
+            h1
+                font-size: 80px
             p
                 font-size: 16px   
 
