--- a/NewStart/_nice.sass
+++ b/NewStart/_nice.sass
@@ -2,7 +2,7 @@
     background-image: url("https://startbootstrap.github.io/startbootstrap-agency/assets/img/header-bg.jpg")
     background-position: center center
     background-size: cover
-    height: 100%
+    width: 100%
     .box
         height: 700px
         display: flex
@@ -28,7 +28,7 @@
                     cursor: pointer
                 &:hover
                     background-color: #c28d07
-    @media screen and ( max-width: 576px )
+    @media screen and ( max-width: 990px )
         .box
             .textbox
                 h1
