--- a/NewStart/style.css
+++ b/NewStart/style.css
@@ -100,7 +100,7 @@ header .menu nav a:hover {
   background-image: url("https://startbootstrap.github.io/startbootstrap-agency/assets/img/header-bg.jpg");
   background-position: center center;
   background-size: cover;
-  height: 100%;
+  width: 100%;
 }
 #nice .box {
   height: 700px;
@@ -132,7 +132,7 @@ header .menu nav a:hover {
 #nice .box .textbox .btn:hover {
   background-color: #c28d07;
 }
-@media screen and (max-width: 576px) {
+@media screen and (max-width: 990px) {
   #nice .box .textbox h1 {
     font-size: 35px;
   }
