--- a/NewStart/_portfolio.sass
+++ b/NewStart/_portfolio.sass
@@ -1,7 +1,7 @@
 #portfolio
     background-color: #acadaf16
     .textbox
-        padding-top: 40px
+        padding-top: 20px
         text-align: center
         h1
             margin: 20px
@@ -16,10 +16,11 @@
             line-height: 1.2
             margin-top: 13px
         h4
+            padding: 5px
             font-size: 20px
             color: #838489
     .box
-        margin-bottom: 30px
+        margin-bottom: 20px
         background-color: #ffff
         padding-bottom: 20px
         .imgbox
